--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,112 @@
-/* Error: Undefined variable.
- *    ,
- * 16 |     @media (max-width: #{$screen-lg-max}) {
- *    |                          ^^^^^^^^^^^^^^
- *    '
- *   src\_mixins.scss 16:26  lg()
- *   src\_layout.scss 36:5   @import
- *   src\style.scss 3:9      root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 16 \2502      @media (max-width: #{$screen-lg-max}) {\d\a    \2502                           ^^^^^^^^^^^^^^\a    \2575 \a   src\\_mixins.scss 16:26  lg()\a   src\\_layout.scss 36:5   @import\a   src\\style.scss 3:9      root stylesheet";
+body {
+  font-family: poppins;
+  background-color: #F3F1EF;
+  margin: 0;
 }
+
+main {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+mainsection {
+  font-size: 2rem;
+}
+
+footer {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  font-size: 0.7rem;
+}
+
+.image-grid {
+  --gap: 20px;
+  --num-cols: 4;
+  --row-height: 100%;
+  --row-height: fit;
+  box-sizing: border-box;
+  padding: var(--gap);
+  display: grid;
+  grid-template-columns: repeat(var(--num-cols), 1fr);
+  grid-auto-rows: var(--row-height);
+  gap: var(--gap);
+}
+@media (max-width: 992px) {
+  .image-grid {
+    --num-cols: 3;
+  }
+}
+@media (max-width: 768px) {
+  .image-grid {
+    --num-cols: 2;
+  }
+}
+@media (max-width: 576px) {
+  .image-grid {
+    --num-cols: 1;
+  }
+}
+.image-grid img {
+  width: 100%;
+  min-width: 250px;
+  border-radius: 20px;
+}
+.image-grid .portfolio-images {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+.image-grid .portfolio-images .image-grid {
+  display: flex;
+  align-items: center;
+}
+
+.image-layout {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+header {
+  background-color: #F3F1EF;
+}
+
+nav {
+  font-family: poppins;
+  border-bottom: 0.15rem solid #231F20;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+nav .main-nav {
+  padding: 10px 15px;
+  text-transform: uppercase;
+  text-align: right;
+  display: flex;
+  align-items: center;
+}
+nav ul {
+  text-align: right;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  display: inline-block;
+}
+nav li {
+  font-size: 15px;
+  margin: 0 10px;
+  list-style: none;
+}
+
+.logo {
+  width: 200px;
+}
+
+h1 {
+  font-family: montserrat;
+}
+
+/*# sourceMappingURL=style.css.map */
