Working through - Solving NODE 5

--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -71,3 +71,7 @@ footer {
     align-content: center;
     justify-content: center;
 }
+.kya-photo {
+    width: 400px;
+    border-radius: 20px;
+}
