--- a/src/_nav.scss
+++ b/src/_nav.scss
@@ -38,25 +38,22 @@ nav {
 .logo {
     width: 200px;
 }
+$hover-color: darken($link-color, 20%);
+$visited-color: lighten($link-color, 20%);
 
-
-// header {
-//     padding-top: .5em;
-// 	padding-bottom: .5em;
-// 	border: 1px solid #a2a2a2;
-// 	background-color: #f4f4f4;
-// 	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-// 	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-// 	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-// 	-webkit-border-radius: 5px;
-// 	-moz-border-radius: 5px;
-// 	border-radius: 5px;
-// }
-// .navigation_container {
-//     display: flex;
-//     align-content: center;
-// }
-
-// .main-nav {
-    
-// }
+//link styling
+a{
+  color: $color-primary;
+  text-decoration: none;
+  
+  &:hover{
+    color: $hover-color;
+    border-bottom: 1px solid $hover-color;
+  }
+  
+  &:visited{
+    color: $visited-color;
+    border-color: $visited-color;
+  }
+}
+  
