--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,7 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 body {
-  font-family: poppins;
+  font-family: "Montserrat", sans-serif;
   background-color: #F3F1EF;
   margin: 0;
 }
@@ -18,6 +20,7 @@ footer {
   align-content: center;
   justify-content: center;
   font-size: 0.7rem;
+  padding: 3rem;
 }
 
 .image-grid {
@@ -68,6 +71,26 @@ footer {
   justify-content: center;
 }
 
+.kya-photo {
+  width: 400px;
+  border-radius: 20px;
+}
+
+button {
+  background-color: #E66F50;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 35px;
+  font-weight: bolder;
+  font-size: 20px;
+}
+
 header {
   background-color: #F3F1EF;
 }
@@ -105,6 +128,139 @@ nav li {
   width: 200px;
 }
 
+ul {
+  list-style: none;
+}
+ul a {
+  color: #231F20;
+  font-weight: bold;
+  text-decoration: none;
+}
+ul a:hover {
+  color: #E66F50;
+}
+
+.navigation-container {
+  display: flex;
+  align-content: center;
+}
+
+.about {
+  display: block;
+  text-align: center;
+  min-width: 300px;
+  max-width: 1200px;
+}
+@media screen and (max-width: 1400px) {
+  .about div.example {
+    width: 1200px;
+  }
+}
+@media screen and (max-width: 900px) {
+  .about div.example {
+    width: 700px;
+  }
+}
+
+.kya-about {
+  display: flex;
+  justify-content: center;
+}
+
+/* NAVBAR MENU */
+.menu {
+  display: flex;
+  gap: 1em;
+  font-size: 18px;
+}
+
+.menu li:hover {
+  background-color: #eccfca;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+.menu li {
+  padding: 5px 14px;
+}
+
+/* DROPDOWN MENU */
+.services {
+  position: relative;
+}
+
+.dropdown {
+  background-color: #eccfca;
+  padding: 1em 0;
+  position: absolute; /*WITH RESPECT TO PARENT*/
+  display: none;
+  border-radius: 8px;
+  top: 35px;
+}
+
+.dropdown li + li {
+  margin-top: 10px;
+}
+
+.dropdown li {
+  padding: 0.5em 1em;
+  width: 8em;
+  text-align: center;
+}
+
+.dropdown li:hover {
+  background-color: #eccfca;
+}
+
+.services:hover .dropdown {
+  display: block;
+}
+
+input[type=checkbox] {
+  display: none;
+}
+
+/* HAMBURGER MENU */
+.hamburger {
+  display: none;
+  font-size: 35px;
+  user-select: none;
+}
+
+/* APPLYING MEDIA QUERIES */
+@media (max-width: 768px) {
+   .menu {
+    display: none;
+    position: absolute;
+    background-color: #eccfca;
+    right: 0;
+    left: 0;
+    text-align: center;
+    padding: 16px 0;
+  }
+  .menu li:hover {
+    display: inline-block;
+    background-color: #eccfca;
+    transition: 0.3s ease;
+  }
+  .menu li + li {
+    margin-top: 12px;
+  }
+  input[type=checkbox]:checked ~ .menu {
+    display: block;
+  }
+  .hamburger {
+    display: block;
+  }
+  .dropdown {
+    left: 50%;
+    top: 30px;
+    transform: translateX(35%);
+  }
+  .dropdown li:hover {
+    background-color: #eccfca;
+  }
+}
 h1 {
   font-family: montserrat;
 }
