--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -20,7 +20,7 @@ footer {
     align-content: center;
     justify-content: center;
     font-size: 0.70rem;
-    padding-bottom: 10rem;
+    padding: 3rem;
 }
 .image-grid {
     --gap : 20px;
@@ -75,3 +75,17 @@ footer {
     width: 400px;
     border-radius: 20px;
 }
+button {
+    background-color: #E66F50;
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 35px;
+    font-weight: bolder;
+    font-size: 20px;
+  }
